local-custom/k8s/litmus-installation.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: litmus-chaos
---
# GraphQL Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmusportal-server
  namespace: litmus-chaos
  labels:
    component: litmusportal-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: litmusportal-server
  template:
    metadata:
      labels:
        component: litmusportal-server
    spec:
      serviceAccountName: litmus-server-account
      automountServiceAccountToken: true
      volumes:
        - name: gitops-storage
          emptyDir: {}
        - name: hub-storage
          emptyDir: {}
      containers:
        - name: graphql-server
          image: litmuschaos/litmusportal-server:ci
          volumeMounts:
            - mountPath: /tmp/
              name: gitops-storage
            - mountPath: /tmp/version
              name: hub-storage
          securityContext:
            runAsUser: 2000
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          ports:
            - name: graphql-http
              containerPort: 8081
            - name: graphql-grpc
              containerPort: 8001
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "250Mi"
              cpu: "225m"
              ephemeral-storage: "500Mi"
            limits:
              memory: "712Mi"
              cpu: "550m"
              ephemeral-storage: "1Gi"
---
# GraphQL Server NetworkPolicy
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: litmusportal-server
  namespace: litmus-chaos
  labels:
    component: litmusportal-server
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      component: litmusportal-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: litmusportal-frontend
---
# GraphQL Server Service
apiVersion: v1
kind: Service
metadata:
  name: litmusportal-server-service
  namespace: litmus-chaos
spec:
  type: NodePort
  ports:
    - name: graphql-server-https
      port: 9004
      targetPort: 8081
    - name: graphql-rpc-server-https
      port: 8001
      targetPort: 8001
  selector:
    component: litmusportal-server
---
# Auth Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmusportal-auth-server
  namespace: litmus-chaos
  labels:
    component: litmusportal-auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: litmusportal-auth-server
  template:
    metadata:
      labels:
        component: litmusportal-auth-server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: auth-server
          image: litmuschaos/litmusportal-auth-server:ci
          securityContext:
            runAsUser: 2000
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          ports:
            - name: auth-http
              containerPort: 3001
            - name: auth-grpc
              containerPort: 3031
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
              ephemeral-storage: "500Mi"
            limits:
              memory: "712Mi"
              cpu: "550m"
              ephemeral-storage: "1Gi"
---
# Auth Server NetworkPolicy
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: litmusportal-auth-server
  namespace: litmus-chaos
  labels:
    component: litmusportal-auth-server
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      component: litmusportal-auth-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: litmusportal-frontend
  - from:
    - podSelector:
        matchLabels:
          component: litmusportal-server
---
# Auth Server Service
apiVersion: v1
kind: Service
metadata:
  name: litmusportal-auth-server-service
  namespace: litmus-chaos
spec:
  type: NodePort
  ports:
    - name: auth-server-https
      port: 9005
      targetPort: 3001
    - name: auth-rpc-server-https
      port: 3031
      targetPort: 3031
  selector:
    component: litmusportal-auth-server
